K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/sunrasan/employeeapi
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: employeeapi
    app.kubernetes.io/component: employeeapi
    app.kubernetes.io/instance: employeeapi
    app.kubernetes.io/name: employeeapi
    app.kubernetes.io/part-of: primer-export
  name: employeeapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employeeapi
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: employeeapi
    spec:
      containers:
      - image: <AWS_ACCOUNT_ID>.dkr.ecr.<REGION>.amazonaws.com/employeeapi:latest
        imagePullPolicy: Always
        name: employeeapi
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
