K8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employeeapi
  namespace: employee

  labels:
    app: employeeapi

spec:
  type: ClusterIP

  selector:
    app: employeeapi

  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
